{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 367,
  "lineage": "cab77c92-2d93-72ef-b296-205fa8cba20a",
  "resources": [
    {
      "module": "module.appgw-afa",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/backendAddressPools/BackendPool",
                "ip_address_list": [
                  "51.105.206.73"
                ],
                "ip_addresses": [
                  "51.105.206.73"
                ],
                "name": "BackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "hello.aci1.apid.vnet-tribe.afa.azure.extraxa",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/backendHttpSettingsCollection/BackendHTTPSettings",
                "name": "BackendHTTPSettings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 5
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/frontendIPConfigurations/ingress-ip-config",
                "name": "ingress-ip-config",
                "private_ip_address": "10.1.2.10",
                "private_ip_address_allocation": "Static",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/afa-gw"
              },
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/frontendIPConfigurations/egress-ip-config",
                "name": "egress-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/publicIPAddresses/afa-gw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/frontendPorts/FrontEnd-Port",
                "name": "FrontEnd-Port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/gatewayIPConfigurations/afa-gw-ip-configuration",
                "name": "afa-gw-ip-configuration",
                "subnet_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/afa-gw"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/frontendIPConfigurations/ingress-ip-config",
                "frontend_ip_configuration_name": "ingress-ip-config",
                "frontend_port_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/frontendPorts/FrontEnd-Port",
                "frontend_port_name": "FrontEnd-Port",
                "host_name": "hello.aci1.apid.vnet-tribe.afa.azure.extraxa",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/httpListeners/afa-gw-listener",
                "name": "afa-gw-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway",
            "identity": [],
            "location": "westeurope",
            "name": "afa-gw-appgateway",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/backendAddressPools/BackendPool",
                "backend_address_pool_name": "BackendPool",
                "backend_http_settings_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/backendHttpSettingsCollection/BackendHTTPSettings",
                "backend_http_settings_name": "BackendHTTPSettings",
                "http_listener_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/httpListeners/afa-gw-listener",
                "http_listener_name": "afa-gw-listener",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/requestRoutingRules/afa-gw-routing_rule",
                "name": "afa-gw-routing_rule",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "poc-netop-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            },
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.appgw-afa.azurerm_public_ip.public-fe",
            "module.appgw-afa.azurerm_subnet.gw-subnet",
            "module.appgw-apid.azurerm_public_ip.public-fe",
            "module.vnet-afa.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.appgw-apid",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/backendAddressPools/BackendPool",
                "ip_address_list": [
                  "10.1.1.4"
                ],
                "ip_addresses": [
                  "10.1.1.4"
                ],
                "name": "BackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "hello.aci1.apid.vnet-tribe.afa.azure.extraxa",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/backendHttpSettingsCollection/BackendHTTPSettings",
                "name": "BackendHTTPSettings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 5
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/frontendIPConfigurations/ingress-ip-config",
                "name": "ingress-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/publicIPAddresses/apid-gw-pip",
                "subnet_id": ""
              },
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/frontendIPConfigurations/egress-ip-config",
                "name": "egress-ip-config",
                "private_ip_address": "10.1.2.10",
                "private_ip_address_allocation": "Static",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid-gw"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/frontendPorts/FrontEnd-Port",
                "name": "FrontEnd-Port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/gatewayIPConfigurations/apid-gw-ip-configuration",
                "name": "apid-gw-ip-configuration",
                "subnet_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid-gw"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/frontendIPConfigurations/ingress-ip-config",
                "frontend_ip_configuration_name": "ingress-ip-config",
                "frontend_port_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/frontendPorts/FrontEnd-Port",
                "frontend_port_name": "FrontEnd-Port",
                "host_name": "hello.aci1.apid.vnet-tribe.afa.azure.extraxa",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/httpListeners/apid-gw-listener",
                "name": "apid-gw-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway",
            "identity": [],
            "location": "westeurope",
            "name": "apid-gw-appgateway",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/backendAddressPools/BackendPool",
                "backend_address_pool_name": "BackendPool",
                "backend_http_settings_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/backendHttpSettingsCollection/BackendHTTPSettings",
                "backend_http_settings_name": "BackendHTTPSettings",
                "http_listener_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/httpListeners/apid-gw-listener",
                "http_listener_name": "apid-gw-listener",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/requestRoutingRules/apid-gw-routing_rule",
                "name": "apid-gw-routing_rule",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "poc-netop-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            },
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.apid-aci.azurerm_container_group.netop-aci",
            "module.apid-aci.azurerm_network_profile.netop-np",
            "module.appgw-apid.azurerm_public_ip.public-fe",
            "module.appgw-apid.azurerm_subnet.gw-subnet",
            "module.vnet-apid.azurerm_subnet.gw-subnet",
            "module.vnet-apid.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/networkInterfaces/afa-nic",
            "ip_configuration": [
              {
                "name": "vm-ipconfig",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/afa"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-A8-8B-28",
            "name": "afa-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "poc-netop-rg",
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            },
            "virtual_machine_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Compute/virtualMachines/afa-vm"
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.vnet-afa.azurerm_subnet.gw-subnet",
            "module.vnet-afa.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.apid-aci",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aci-sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/networkSecurityGroups/aci-appgw-sg",
            "location": "westeurope",
            "name": "aci-appgw-sg",
            "resource_group_name": "poc-netop-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.1.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowFromAppGateway",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.1.2.10",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            }
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.apid-aci.azurerm_container_group.netop-aci",
            "module.apid-aci.azurerm_network_profile.netop-np",
            "module.vnet-apid.azurerm_subnet.gw-subnet",
            "module.vnet-apid.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/networkSecurityGroups/netop-nsg",
            "location": "westeurope",
            "name": "netop-nsg",
            "resource_group_name": "poc-netop-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-afa-gw",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "51.105.184.165",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-azure-admin",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            }
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.appgw-afa.azurerm_public_ip.public-fe"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/publicIPAddresses/bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.67.221.80",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "bastion-pip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "poc-netop-rg",
            "sku": "Standard",
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            }
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg"
          ]
        }
      ]
    },
    {
      "module": "module.appgw-afa",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-fe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/publicIPAddresses/afa-gw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.105.184.165",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "afa-gw-pip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "poc-netop-rg",
            "sku": "Standard",
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            }
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg"
          ]
        }
      ]
    },
    {
      "module": "module.appgw-apid",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-fe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/publicIPAddresses/apid-gw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.105.206.73",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "apid-gw-pip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "poc-netop-rg",
            "sku": "Standard",
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            }
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.0/27",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/AzureBastionSubnet",
            "ip_configurations": [
              "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/bastionHosts/Bastion/bastionHostIpConfigurations/ip-config"
            ],
            "name": "AzureBastionSubnet",
            "resource_group_name": "poc-netop-rg",
            "virtual_network_name": "afa"
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.vnet-afa.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.appgw-afa",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gw-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/28",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/afa-gw",
            "ip_configurations": [
              "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/afa-gw-appgateway/frontendIPConfigurations/ingress-ip-config"
            ],
            "name": "afa-gw",
            "resource_group_name": "poc-netop-rg",
            "virtual_network_name": "afa"
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.vnet-afa.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet-apid",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gw-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "delegation": [
              {
                "name": "vm-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.ContainerInstance/containerGroups"
                  }
                ]
              }
            ],
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid",
            "name": "apid",
            "resource_group_name": "poc-netop-rg",
            "virtual_network_name": "apid"
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.vnet-apid.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.appgw-apid",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gw-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/28",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid-gw",
            "ip_configurations": [
              "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/applicationGateways/apid-gw-appgateway/frontendIPConfigurations/egress-ip-config"
            ],
            "name": "apid-gw",
            "resource_group_name": "poc-netop-rg",
            "virtual_network_name": "apid"
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.vnet-apid.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet-afa",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gw-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/afa",
            "ip_configurations": [
              "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/networkInterfaces/afa-nic/ipConfigurations/vm-ipconfig"
            ],
            "name": "afa",
            "resource_group_name": "poc-netop-rg",
            "virtual_network_name": "afa"
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.vnet-afa.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.apid-aci",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aci-sg-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid",
            "network_security_group_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/networkSecurityGroups/aci-appgw-sg",
            "subnet_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid"
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg",
            "module.apid-aci.azurerm_network_security_group.aci-sg",
            "module.vnet-apid.azurerm_subnet.gw-subnet",
            "module.vnet-apid.azurerm_virtual_network.gw-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid-gw",
            "network_security_group_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/networkSecurityGroups/netop-nsg",
            "subnet_id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid-gw"
          },
          "dependencies": [
            "module.appgw-apid.azurerm_subnet.gw-subnet",
            "module.firewall.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet-apid",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "gw-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid",
            "location": "westeurope",
            "name": "apid",
            "resource_group_name": "poc-netop-rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid",
                "name": "apid"
              },
              {
                "address_prefix": "10.1.2.0/28",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/apid/subnets/apid-gw",
                "name": "apid-gw"
              }
            ],
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            }
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet-afa",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "gw-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa",
            "location": "westeurope",
            "name": "afa",
            "resource_group_name": "poc-netop-rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/afa",
                "name": "afa"
              },
              {
                "address_prefix": "10.1.2.0/28",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/afa-gw",
                "name": "afa-gw"
              },
              {
                "address_prefix": "10.1.3.0/27",
                "id": "/subscriptions/47309ca5-07cb-421a-9190-601d13a30cdf/resourceGroups/poc-netop-rg/providers/Microsoft.Network/virtualNetworks/afa/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ],
            "tags": {
              "global-dcs": "DDOO",
              "global-env": "sb",
              "global-opco": "AFA",
              "global-project": "LB25689"
            }
          },
          "dependencies": [
            "azurerm_resource_group.poc-netop-rg"
          ]
        }
      ]
    }
  ]
}